@@ -10,6 +10,8 @@ Version 0.9.0alpha10 - 2007-05-XX
    * Fixed web-service error caused PUID submissions.
    * Change function $gt(), $gte(), $lt(), $lte() to compare numbers, not strings. (#2848)
    * Fixed kfmclient launching under KDE/Python 2.5.
+   * Fixed similarity calculation of non-latin texts. (#2891)
+   * Don't try to auto-analyze files with "loading" errors. (#2862)
 
 Version 0.9.0alpha9 - 2007-05-12
  * New Features:
